# BottleCap-bsort-ML

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.yaml
.github/workflows/: ci.yml
artifacts/: data_bottlecap.yaml
artifacts/bsort_train/: args.yaml  results.csv
data/train/: labels.cache
data/train/labels/: raw-250110_dc_s001_b2_15.txt  raw-250110_dc_s001_b2_3.txt
data/val/: labels.cache
data/val/labels/: raw-250110_dc_s001_b4_1.txt  raw-250110_dc_s001_b4_2.txt  raw-250110_dc_s001_b4_3.txt
notebooks/: 01_experiments_bottlecap.ipynb
src/bsort/: __init__.py  cli.py  config.py  infer.py  model.py  train.py
src/bsort.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_config.py  test_data_yaml.py  test_smoke.py
tools/: relabel_colors.py  speed_test.py  test.py
